<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TVT"
        android:layout_width="47dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/TVT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVDT"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="19dp"
        android:text="@string/TVDT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVT" />

    <TextView
        android:id="@+id/TVGT"
        android:layout_width="57dp"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="41dp"
        android:text="@string/TVGT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVDT" />

    <TextView
        android:id="@+id/TVQT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/TVQT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GR" />

    <TextView
        android:id="@+id/TVCT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="41dp"
        android:text="@string/TVCT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SNQT" />

    <EditText
        tools:ignore="LabelFor"
        android:id="@+id/PTT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TVT"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        tools:ignore="LabelFor"
        android:id="@+id/PTSDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TVDT"
        app:layout_constraintTop_toBottomOf="@+id/PTT"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/GR"
        android:layout_width="264dp"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVGT">

        <RadioButton
            android:id="@+id/RBTN"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/RBTN" />

        <RadioButton
            android:id="@+id/RBTN2"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/RBTN2" />

    </RadioGroup>

    <Spinner
        android:id="@+id/SNQT"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVQT" />

    <EditText
        android:id="@+id/PTCT"
        android:layout_width="286dp"
        android:layout_height="132dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVCT"
        tools:ignore="LabelFor" />

    <Button
        android:onClick="BTDY"
        android:id="@+id/BTDY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="22dp"
        android:text="@string/BTDY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PTCT" />

    <Button
        android:onClick="BTH"
        android:id="@+id/BTH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="22dp"
        android:text="@string/BTH"
        app:layout_constraintStart_toEndOf="@+id/BTDY"
        app:layout_constraintTop_toBottomOf="@+id/PTCT" />
</androidx.constraintlayout.widget.ConstraintLayout>